Some more styling to fix janky displays/remove margins that made unwanted overflows

--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 !important;
 }
 
 .timedModeInput {
