--- a/src/components/GameModes.module.css
+++ b/src/components/GameModes.module.css
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 0 !important;
 }
 
 
@@ -67,3 +68,10 @@
     align-items: center;
     justify-content: center;
 }
+
+.backButton {
+    margin: 0;
+    width: 20%;
+    margin: 0 !important;
+}
+
